--- a/style.css
+++ b/style.css
@@ -170,51 +170,39 @@ section .title::after {
 /* home section styling */
 .home {
   display: flex;
-  background: url("images/background.png") no-repeat center;
-  background-size: cover;
+  background: url("images/banner.jpg") no-repeat center;
   height: 100vh;
-  min-height: 500px;
   color: #fff;
+  min-height: 500px;
+  //background-size: cover;
+  //background-attachment: fixed;
   font-family: "Ubuntu", sans-serif;
 }
-
 .home .max-width {
-  margin: auto;
-  padding: 0 20px;
-  max-width: 1200px;
+  margin: auto 0 auto 40px;
 }
-
-.home .home-content {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  height: 100%;
+.home .max-width .row {
+  margin-right: 0;
 }
-
 .home .home-content .text-1 {
   font-size: 27px;
   color: #80ced6;
 }
-
 .home .home-content .text-2 {
   font-size: 75px;
   font-weight: 600;
   margin-left: -3px;
   color: #40c1de;
 }
-
 .home .home-content .text-3 {
   font-size: 40px;
   margin: 5px 0;
   color: #80ced6;
 }
-
 .home .home-content .text-3 span {
   color: #37828a;
   font-weight: 500;
 }
-
 .home .home-content a {
   display: inline-block;
   background: #80ced6;
@@ -226,15 +214,11 @@ section .title::after {
   border-radius: 6px;
   border: 2px solid #80ced6;
   transition: all 0.3s ease;
-  text-decoration: none;
 }
-
 .home .home-content a:hover {
   color: #80ced6;
   background: none;
 }
-
-
 
 /* about section styling */
 .about .title::after {
