--- a/style.css
+++ b/style.css
@@ -219,6 +219,31 @@ section .title::after {
   color: #80ced6;
   background: none;
 }
+.home .home_img {
+  background: url('images/faviconW.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  box-shadow: inset 0 0 0 9px rgb(255 255 255/30%);
+  order: 1;
+  justify-self: center;
+  width: 300px;
+  height: 300px;
+  animation: profile_animate 8s ease-in-out infinite 1s;
+  display: flex;
+  justify-content: flex-end; /* Align the image to the right side */
+}
+@keyframes profile_animate {
+  0% {
+    border-radius: 60% 40% 30% 70%/ 60% 30% 70% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 40%/ 50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70%/ 60% 30% 70% 40%;
+  }
+}
 
 /* about section styling */
 .about .title::after {
