--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ section .title::after {
   color: #80ced6;
   background: none;
 }
-.home .home_img {
+/* .home .home_img {
   background: url('images/faviconW.png');
   background-repeat: no-repeat;
   background-position: center;
@@ -231,9 +231,9 @@ section .title::after {
   height: 300px;
   animation: profile_animate 8s ease-in-out infinite 1s;
   display: flex;
-  justify-content: flex-end; /* Align the image to the right side */
-}
-@keyframes profile_animate {
+  justify-content: flex-end; /* Align the image to the right side 
+} */
+/* @keyframes profile_animate {
   0% {
     border-radius: 60% 40% 30% 70%/ 60% 30% 70% 40%;
   }
@@ -243,7 +243,7 @@ section .title::after {
   100% {
     border-radius: 60% 40% 30% 70%/ 60% 30% 70% 40%;
   }
-}
+} */
 
 /* about section styling */
 .about .title::after {
